--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,13 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
     "react-paystack": "^3.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "simple-crypto-js": "^3.0.0"
   }
 }
